# SpCloudCore

./: .$SpCloud.drawio.bkp  .$SpCloud.drawio.dtmp  CMakeLists.txt  Dockerfile  README.md  SpCloud.drawio
.github/workflows/: docker-build.yml
Client/: index.html  scripts.js
SpCloudMain/: CMakeLists.txt  SpCloudMain.cpp  SpCloudMain.h
SpCloudMain/Controllers/: PublishController.cpp
SpCloudMain/Models/: App.cpp  User.cpp
SpCloudMain/Service/: AuthorizationService.cpp  CommandService.cpp  DiscordService.cpp  FileProcessingService.cpp  Logger.cpp  MongoDbService.cpp
